--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gapi-script": "^1.2.0",
+    "js-cookie": "^3.0.5",
+    "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-router-dom": "^6.26.1"
   }
 }
