--- a/cafe-monet-display/package.json
+++ b/cafe-monet-display/package.json
@@ -10,6 +10,7 @@
     "js-cookies": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-native": "^0.75.3",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.3",
