--- a/cafe-monet-display/package.json
+++ b/cafe-monet-display/package.json
@@ -13,6 +13,7 @@
     "react-native": "^0.75.3",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.6",
     "serve": "^14.2.3",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0"
@@ -21,6 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "dev": "npm run build && npx serve -s build",
+    "sendit": "git add --all && git commit -m \"debugging\" && git push",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
